--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 
       <!-- 話題的遊戲 (Popular Games) -->
       <section>
-        <h2 class="blue" data-i18n="section.popularGames.title">開發遊戲列表!</h2>
-		<div id="featured-deals-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">			
+        <h2 class="blue mb-6" data-i18n="section.popularGames.title">開發遊戲列表!</h2>
+		<div id="featured-deals-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 ">			
 
 			  <div >
 				<div class="border border-gray-200 rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
@@ -399,7 +399,7 @@
 
       <!-- News 區塊 (展開後內容自動適應高度) -->
       <section id="news-section" class="py-12 bg-gray-50">
-	          <h2 class="purple" data-i18n="News"></h2>
+	          <h2 class="purple mb-6	" data-i18n="News"></h2>
 
         <div class="container">
           <div class="space-y-4">
