--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
       <!-- 圖片創作 -->
       <section>
         <h2 class="pink" data-i18n="section.characters.title">圖片創作</h2>
-        <div class="flex" id="pic-list">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 " id="pic-list">
 				  
         </div>
        
@@ -793,11 +793,13 @@
       const imgModal = document.getElementById("imgModal");
       const modalImg = document.getElementById("modalImg");
       const closeImgModal = document.getElementById("closeImgModal");
+	  const caption = document.querySelector('.img-caption');
 
       // 點擊圖片顯示 Modal
       function openImageModal(src, alt) {
         modalImg.src = src;
         modalImg.alt = alt;
+		caption.textContent = alt;
         imgModal.classList.add("active");
       }
 
@@ -829,39 +831,23 @@
 
 		  data.forEach((item, index) => {
 			const card = document.createElement('div');
-			card.className = 'card';
-			card.style.flex = '1 0 21%';
-			card.style.position = 'relative';
+		//	card.className = 'card';
+		//	card.style.flex = '1 0 21%';
+		//	card.style.position = 'relative';
+
+		//	  const card = document.createElement('div');
+		  card.className = 'aspect-square border border-gray-200 rounded overflow-hidden shadow hover:shadow-md transition-shadow';
+		  card.style.flex = '1 0 21%';
+		  card.style.position = 'relative';
 
 			const img = document.createElement('img');
 			img.src = item.image;
 			img.alt = item.description;
-			img.className = 'click-image';
+			img.className = 'w-full h-full object-cover click-image';
 			img.style.cursor = 'pointer';
 			img.style.width = '200px';
 			img.style.height = '200px';
 			img.style.objectFit = 'cover'; // 可選：讓圖片不變形地填滿
-
-			// 選擇性加上編號
-			if (index === 0) {
-			  const badge = document.createElement('div');
-			  badge.style.cssText = `
-				position: absolute;
-				top: -10px;
-				left: -10px;
-				background: #ffd700;
-				color: #fff;
-				border-radius: 50%;
-				width: 40px;
-				height: 40px;
-				line-height: 40px;
-				font-weight: bold;
-				font-size: 0.9em;
-				text-align: center;
-			  `;
-			  badge.textContent = '1';
-			  card.appendChild(badge);
-			}
 
 			card.appendChild(img);
 			container.appendChild(card);
