--- a/index.html
+++ b/index.html
@@ -360,12 +360,12 @@
 
       <!-- 社群圖示導覽 -->
       <nav class="top-nav-icons">
-        <a href="https://x.com/FilterGame_Dev" class="twitter">Twitter</a>
-        <a href="https://www.facebook.com/FilterGame" class="facebook">Facebook</a>
-        <a href="https://store.steampowered.com/app/2325390?utm_source=web" class="instagram">Steam</a>
-        <a href="https://www.youtube.com/@FilterGameDev" class="youtube">Youtube</a>
-        <a href="mailto:filtergametw@gmail.com" class="mail">Mail</a>
-        <a href="https://home.gamer.com.tw/creation.php?owner=kkll7952" class="info">Gamer</a>
+        <a href="https://x.com/FilterGame_Dev" class="twitter" target="_blank">Twitter</a>
+        <a href="https://www.facebook.com/FilterGame" class="facebook" target="_blank">Facebook</a>
+        <a href="https://store.steampowered.com/app/2325390?utm_source=web" class="instagram" target="_blank">Steam</a>
+        <a href="https://www.youtube.com/@FilterGameDev" class="youtube" target="_blank">Youtube</a>
+        <a href="mailto:filtergametw@gmail.com" class="mail" target="_blank">Mail</a>
+        <a href="https://home.gamer.com.tw/creation.php?owner=kkll7952" class="info" target="_blank">Gamer</a>
       </nav>
 
       <!-- Hero 區 -->
@@ -555,17 +555,21 @@
       <!-- 聯絡我們 -->
       <section>
         <h2 class="gray" data-i18n="section.contact.title">お問い合わせ</h2>
-        <div class="card" style="display: flex; align-items: center; gap: 10px; background: #f9f9f9; border-radius: 4px; padding: 10px;">
-          <img src="/placeholder.svg?height=60&width=60&text=Contact" alt="Contact" style="border-radius: 4px;" />
-          <div>
-            <h3 data-i18n="section.contact.card.title">お問い合わせ</h3>
-            <p style="font-size: 0.9em; color: #666;" data-i18n="section.contact.card.desc">ゲームに関するご質問やお問い合わせはこちらから</p>
-          </div>
-        </div>
+	              <div class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow p-4">
+
+		  <nav class="top-nav-icons">
+			<a href="https://x.com/FilterGame_Dev" class="twitter" target="_blank">Twitter</a>
+			<a href="https://www.facebook.com/FilterGame" class="facebook" target="_blank">Facebook</a>
+			<a href="https://store.steampowered.com/app/2325390?utm_source=web" class="instagram" target="_blank">Steam</a>
+			<a href="https://www.youtube.com/@FilterGameDev" class="youtube" target="_blank">Youtube</a>
+			<a href="mailto:filtergametw@gmail.com" class="mail" target="_blank">Mail</a>
+			<a href="https://home.gamer.com.tw/creation.php?owner=kkll7952" class="info" target="_blank">Gamer</a>
+		  </nav>
+		  <div>
       </section>
 
 
-    <!-- 底部社群導覽 -->
+    <!-- 底部社群導覽 
     <div class="container" style="margin-bottom: 20px;">
       <nav class="top-nav-icons">
         <a href="https://x.com/FilterGame_Dev" class="twitter">Twitter</a>
@@ -575,7 +579,7 @@
         <a href="mailto:filtergametw@gmail.com" class="mail">Mail</a>
         <a href="https://home.gamer.com.tw/creation.php?owner=kkll7952" class="info">Gamer</a>
       </nav>
-    </div>
+    </div>-->
 
     <!-- 頁尾 -->
     <footer style="border-top: 1px solid #ccc; padding: 10px 0; text-align: center;">
@@ -659,7 +663,7 @@
 		"nav.home.item3": "Team Introduction",
 		"nav.game.title": "Games ▼",
 		"nav.game.item1": "AirBoost(2017)",
-		"nav.game.item2": "AirBoost: Sky Knight",
+		"nav.game.item2": "AirBoost Airship Knight",
 		"nav.game.item3": "Popular Games",
 		"nav.game.item4": "Download",
 		"nav.planning.title": "Planning & Promotion ▼",
@@ -693,7 +697,7 @@
 		"news_full_item_1": "=====",
 		"news_item2": "=====",
 		"news_full_item_2": "=====",
-		"steam_airboost_title": "AirBoost: Sky Knight",
+		"steam_airboost_title": "AirBoost Airship Knight",
 		"News": "News"
 	  },
 
@@ -707,7 +711,7 @@
 		"nav.home.item3": "チーム紹介",
 		"nav.game.title": "ゲーム ▼",
 		"nav.game.item1": "AirBoost(2017)",
-		"nav.game.item2": "AirBoost：スカイナイト",
+		"nav.game.item2": "AirBoost エアシップの騎士",
 		"nav.game.item3": "人気ゲーム",
 		"nav.game.item4": "ダウンロード",
 		"nav.planning.title": "企画＆宣伝 ▼",
@@ -741,7 +745,7 @@
 		"news_full_item_1": "=====",
 		"news_item2": "=====",
 		"news_full_item_2": "=====",
-		"steam_airboost_title": "AirBoost：スカイナイト",
+		"steam_airboost_title": "	AirBoost エアシップの騎士",
 		"News": "最新情報"
 	  }
 	};
