--- a/index.html
+++ b/index.html
@@ -318,15 +318,14 @@
           <div class="dropdown">
             <button data-i18n="nav.game.title">遊戲 ▼</button>
             <div class="dropdown-content">
-              <a href="/games" data-i18n="nav.game.item1">AirBoost(2017)</a>
-              <a href="/new-games" data-i18n="nav.game.item2">AirBoost:天空機士</a>
+              <a href="https://store.steampowered.com/app/2325390?utm_source=web" target="_blank" data-i18n="nav.game.item2">AirBoost:天空機士</a>
             </div>
           </div>
           <div class="dropdown">
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
-              <a href="/planning" data-i18n="nav.planning.item1">IndieGameWebTW</a>
-              <a href="/dev-blog" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
+              <a href="https://filtergame.github.io/IndieGameWebTW/" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
+              <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
               <a href="/roadmap" data-i18n="nav.planning.item3">台灣遊戲夢-團隊列表</a>
             </div>
           </div>
@@ -373,30 +372,37 @@
         <img src="WebAsset/library_hero.jpg" alt="Game Screenshot" />
       </section>
 
-	<div class="media-row">
-	  <!-- 左邊影片 -->
-	  <div class="video-container">
-		<iframe
-		  width="560"
-		  height="315"
-		  src="https://www.youtube.com/embed/-TUGg3V_-1M?autoplay=1&mute=1&controls=0&loop=1&playlist=-TUGg3V_-1M"
-		  title="YouTube video player"
-		  frameborder="0"
-		  allow="autoplay; encrypted-media"
-		  allowfullscreen
-		></iframe>
-	  </div>
+      <section>
+        <h2 class="yellow" data-i18n="section.com.title">FilterGame 遊戲開發團隊介紹</h2>
+		  <div class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow p-4">
+		 <p class="text-center mx-auto" data-i18n="section.com.info">FilterGame是台灣的獨立遊戲開發團隊,特別喜歡日本風格的動作遊戲! 除了做遊戲外也會舉辦各種活動!</p>
 
-	  <!-- 右邊 Twitter -->
-	  <div class="twitter-container">
-		<a class="twitter-timeline"
-		   href="https://twitter.com/FilterGame_Dev"
-		   data-height="315"
-		   data-theme="light">
-		  Tweets by @FilterGame_Dev
-		</a>
-	  </div>
-	</div>
+		<div class="media-row">
+		  <!-- 左邊影片 -->
+		  <div class="video-container">
+			<iframe
+			  width="560"
+			  height="315"
+			  src="https://www.youtube.com/embed/-TUGg3V_-1M?autoplay=1&mute=1&controls=0&loop=1&playlist=-TUGg3V_-1M"
+			  title="YouTube video player"
+			  frameborder="0"
+			  allow="autoplay; encrypted-media"
+			  allowfullscreen
+			></iframe>
+		  </div>
+
+		  <!-- 右邊 Twitter -->
+		  <div class="twitter-container">
+			<a class="twitter-timeline"
+			   href="https://twitter.com/FilterGame_Dev"
+			   data-height="315"
+			   data-theme="light">
+			  Tweets by @FilterGame_Dev
+			</a>
+		  </div>
+		</div>
+		  <div>
+      </section>
 
       <!-- 話題的遊戲 (Popular Games) -->
       <section>
@@ -427,7 +433,7 @@
 			  <div >
 				<div class="border border-gray-200 rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
 					<div class="relative h-48">
-						<a href="https://store.steampowered.com/app/2325390" target="_blank">
+						<a href="https://store.steampowered.com/app/2325390?utm_source=web" target="_blank">
 							<img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2325390/header.jpg" alt="AirBoost" class="object-cover absolute inset-0 w-full h-full zoom-image">
 						</a>
 							<div class="absolute top-2 right-2 bg-orange-500 text-white px-2 py-1 rounded font-bold" data-i18n="section.popularGames.demo">DEMO開放中!</div>
@@ -599,7 +605,9 @@
 		"news_item2": "=====",
 		"news_full_item_2": "=====",
 		"steam_airboost_title": "AirBoost:天空機士",
-		"News": "最新消息"
+		"News": "最新消息",
+		"section.com.title" : "FilterGame 遊戲開發團隊介紹 ＼(^ω^＼)",
+		"section.com.info" : "FilterGame是台灣的獨立遊戲開發團隊,特別喜歡日本風格的動作遊戲!<br>除了有做遊戲外也會舉辦各種活動!希望能讓台灣獨立遊戲圈更好!<br>也正在開發Steam美少女動作遊戲<AirBoost:天空機士>!!",
 	  },
 
 	  en: {
@@ -647,7 +655,9 @@
 		"news_item2": "=====",
 		"news_full_item_2": "=====",
 		"steam_airboost_title": "AirBoost Airship Knight",
-		"News": "News"
+		"News": "News",
+		"section.com.title" : "FilterGame Game Development Team Introduction ＼(^ω^＼)",
+		"section.com.info" : "FilterGame is an indie game development team from Taiwan!<br>We especially love Japanese-style action games!In addition to making games, we also organize various events!Currently,<br>we’re developing a Steam game titled AirBoost Airship Knight!",
 	  },
 
 	  ja: {
@@ -695,7 +705,9 @@
 		"news_item2": "=====",
 		"news_full_item_2": "=====",
 		"steam_airboost_title": "	AirBoost エアシップの騎士",
-		"News": "最新情報"
+		"News": "最新情報",
+		"section.com.title" : "FilterGame ゲーム開発チーム紹介 ＼(^ω^＼)",
+		"section.com.info" : "FilterGame は台湾のインディーゲーム開発チームです！<br>日本風のアクションゲームが大好き！ゲーム開発だけでなく、様々な活動も行っています！<br>現在は Steam向けタイトル『AirBoost エアシップの騎士』 を開発中です！",
 	  }
 	};
       // 依據 data-i18n 屬性更新頁面文字
@@ -708,7 +720,7 @@
               const realKey = key.replace("[content]", "");
               el.setAttribute("content", translations[lang][realKey] || "");
             } else {
-              el.innerText = translations[lang][key] || "";
+              el.innerHTML = translations[lang][key] || "";
             }
           }
         });
@@ -804,21 +816,10 @@
 					? translations[lang].expand
 					: (translations[lang].collapse || '收起');
 			  });
-
-			
 		  });
 	  
 		});
 
-      // 綁定展開/收合功能
-      document.querySelectorAll('.news-toggle-btn').forEach(btn => {
-        btn.addEventListener('click', function () {
-          const content = this.parentElement.nextElementSibling;
-          content.classList.toggle('hidden');
-          const span = this.querySelector('span');
-          //span.textContent = content.classList.contains('hidden') ? getI18n('expand') : getI18n('collapse');
-        });
-      });
 
 		//讀CSV顯示圖片卡
 		fetch('WebAsset/Artis_Pic/Artis_Pic.csv')
