移植 IndieGameTW 的內容

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="siteTitle">FilterGame</title>
-    <meta name="description" content="Monster Girl Series Portal Site" data-i18n="[content]metaDescription" />
+    <meta name="description" content="FilterGame IndieGame Dev Site" data-i18n="[content]metaDescription" />
 	  <!-- Tailwind CSS via CDN -->
 	<script src="https://cdn.tailwindcss.com"></script>
 
