--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -26,7 +26,7 @@
 
     <!-- 固定頂部導覽列 -->
     <div class="fixed-top">
-      <div class="container navbar">
+      <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
         <div class="logo">
           <a href="/" data-i18n="nav.logo">FilterGame</a>
         </div>
@@ -38,7 +38,7 @@
           <div class="dropdown">
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
-              <a href="/" data-i18n="nav.home.item1">首頁</a>
+              <a href="/FilterGameWeb/" data-i18n="nav.home.item1">首頁</a>
             </div>
           </div>
           <div class="dropdown">
