--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <div class="dropdown">
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
-              <a href="https://filtergame.github.io/IndieGameWebTW/" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
+              <a href="/FilterGameWeb/IndieGameTW/IndieGameTW.html" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
             </div>
           </div>
